--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^5.0.0
   get: ^4.6.5
+  dio: ^5.1.2
+  pretty_dio_logger: ^1.3.1
 
 dev_dependencies:
   flutter_test:
