--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -57,7 +57,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/
+    - assets/images/welcome_img.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
