--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.6.5
   dio: ^5.1.2
   pretty_dio_logger: ^1.3.1
+  persistent_bottom_nav_bar: ^5.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
