--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/welcome_img.png
+    - assets/images/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
