--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^5.0.0
   get: ^4.6.5
   dio: ^5.1.2
+  carousel_slider: ^4.0.0
   pretty_dio_logger: ^1.3.1
   persistent_bottom_nav_bar: ^5.0.2
 dev_dependencies:
@@ -58,7 +59,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/welcome_img.png
+    - assets/images/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
