--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   carousel_slider: ^4.0.0
   pretty_dio_logger: ^1.3.1
   persistent_bottom_nav_bar: ^5.0.2
+  intl: ^0.18.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
