--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   persistent_bottom_nav_bar: ^5.0.2
   intl: ^0.18.1
+  dotted_line: ^3.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
