--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <4.0.0'
+  sdk: '>=3.0.5 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,7 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^5.0.0
+  # google_fonts: ^5.0.0
+  flutter_paystack: ^1.0.7
   get: ^4.6.5
   dio: ^5.1.2
   carousel_slider: ^4.0.0
@@ -48,9 +49,15 @@ dependencies:
   overlay_loader_with_app_icon: ^0.0.3
   circular_countdown_timer: ^0.2.3
   get_storage: ^2.1.1
+  http: ^0.13.6
+  iconsax: ^0.0.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+# Dwongrading intl for flutter paystack
+dependency_overrides:
+  intl: ^0.17.0-nullsafety.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -93,5 +100,9 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  # fonts:
+  #   - family: JosefinSans
+  #     fonts:
+  #       - asset: assets/fonts/Josefin_Sans.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
