--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   timer_count_down: ^2.2.2
   flutter_native_splash: ^2.3.2
   smooth_page_indicator: ^1.1.0
+  # flutter_share: ^2.0.0
+  # image_gallery_saver: ^2.0.3
  
 dev_dependencies:
   flutter_test:
