--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   firebase_crashlytics: ^3.3.6
   firebase_core: ^2.16.0
   email_validator: ^2.1.17
+  http_parser: ^4.0.2
+  flutter_svg: ^2.0.7
+  cached_network_image: ^3.3.0
   # flutter_share: ^2.0.0
   # image_gallery_saver: ^2.0.3
  
