--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   http_parser: ^4.0.2
   flutter_svg: ^2.0.7
   cached_network_image: ^3.3.0
+  flutter_sticky_header: ^0.6.5
   # flutter_share: ^2.0.0
   # image_gallery_saver: ^2.0.3
 
