Initialize branch with deps

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -68,8 +68,10 @@ dependencies:
   flutter_svg: ^2.0.7
   cached_network_image: ^3.3.0
   flutter_sticky_header: ^0.6.5
-  # flutter_share: ^2.0.0
-  # image_gallery_saver: ^2.0.3
+  flutter_to_pdf: ^0.1.1
+  widgets_to_image: ^0.0.2
+  image_gallery_saver: ^2.0.3
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
