--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -72,6 +72,8 @@ dependencies:
   widgets_to_image: ^0.0.2
   image_gallery_saver: ^2.0.3
   url_launcher: ^6.2.1
+  device_info_plus: ^9.1.0
+  package_info_plus: ^4.2.0
 
 dev_dependencies:
   flutter_test:
