--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -6,10 +6,14 @@
 		<array>
 			<string>mailto</string>
 		</array>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>This app requires access to the photo library.</string>
+		<key>NSPhotoLibraryAddUsageDescription</key>
+		<string>This app wants to save an image to the photo library.</string>
 		<key>NSCameraUsageDescription</key>
-		<string>Explanation on why the camera access is needed.</string>
+		<string>This app requires access to the camera.</string>
 		<key>NSMicrophoneUsageDescription</key>
-		<string>Explanation on why the microphone access is needed.</string>
+		<string>This app requires access to the microphone.</string>
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
