--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -69,11 +69,12 @@ dependencies:
   cached_network_image: ^3.3.0
   flutter_sticky_header: ^0.6.5
   flutter_to_pdf: ^0.1.1
-  widgets_to_image: ^0.0.2
   image_gallery_saver: ^2.0.3
   url_launcher: ^6.2.1
   device_info_plus: ^9.1.0
   package_info_plus: ^4.2.0
+  share_plus: ^7.2.1
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
