--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -61,5 +61,22 @@
 		<true/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<!-- Background Processing -->
+		<key>UIBackgroundModes</key>
+		<array>
+			<string>processing</string>
+		</array>
+		
+		<!-- Task Schedulling -->
+		<key>BGTaskSchedulerPermittedIdentifiers</key>
+		<array>
+		<string>workmanager.background.task</string>
+		</array>
+		
+		<!-- Background Fetching -->
+		<key>UIBackgroundModes</key>
+		<array>
+			<string>fetch</string>
+		</array>
 	</dict>
 </plist>
