--- a/app/.vscode/settings.json
+++ b/app/.vscode/settings.json
@@ -8,7 +8,7 @@
     "editor.suggest.snippetsPreventQuickSuggestions": false,
     "editor.suggestSelection": "first",
     "editor.tabCompletion": "onlySnippets",
-    "editor.wordBasedSuggestions": false,
+    "editor.wordBasedSuggestions": "off",
     "editor.tabSize": 3,
     "editor.defaultFormatter": "Dart-Code.dart-code"
   }
